fix bleeding

--- a/res/css/structures/_LeftPanel.scss
+++ b/res/css/structures/_LeftPanel.scss
@@ -27,7 +27,6 @@ $roomListCollapsedWidth: 68px;
     display: flex;
     max-width: 50%;
     position: relative;
-    margin-right: calc($container-gap-width / 2);
 
     // Contain the amount of layers rendered by constraining what actually needs re-layering via css
     contain: layout paint;
