--- a/res/css/views/voip/_CallView.scss
+++ b/res/css/views/voip/_CallView.scss
@@ -26,7 +26,8 @@ limitations under the License.
 
 .mx_CallView_large {
     padding-bottom: 10px;
-    margin: $container-gap-width calc($container-gap-width / 2);
+    margin: $container-gap-width;
+    margin-right: calc($container-gap-width / 2); // The left side gap is fully handled by this margin. To prohibit bleeding on webkit browser.
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
